# ScanFold3

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  ScanFold.py  ScanFold3_user_guide.odt  ScanFoldBothForInforna.py  ScanFoldFold.py  ScanFoldFunctions.py  ScanFoldScan.py  approximate.cpp  approximate.hpp  basepair.cpp  basepair.hpp  compile.sh  compile_and_run.sh  flow.cpp  fold  fold.cpp  fold.h  fold.hpp  install_conda_environment.sh  matrix.cpp  matrix.hpp  redirect_stdout.py  run.sh  setup.sh  shared.cpp  test.py  zuker.cpp  zuker.hpp
demo/1/: SF3.sh  instructions.txt
demo/2/: SF3.sh  instructions.txt
demo/3/: AF033819.3.win_120.stp_1.tsv  SF3.sh  instructions.txt
demo/4/: HIV.fasta  SF3.sh  instructions.txt
env/: ScanFold3.yml
lib/: fold.hpp
src/: approximate.cpp  approximate.hpp  basepair.cpp  basepair.hpp  flow.cpp  flow.hpp  fold.cpp  fold.hpp  fold_bind_boost.cpp  fold_wrapper.hpp  matrix.cpp  matrix.hpp  scanfoldIO.cpp  scanfoldIO.hpp  shared.cpp  shared.hpp  test.cpp  window.cpp  window.hpp
test/: short.tsv
test/bnip1-201_fulltranscript/: BNIP1-201.win_120.stp_1.tsv  bnip1-201_fulltranscript.fa
test/bnip1-201_fulltranscript/bnip1-201_fulltranscript/: BNIP1-201.win_120.stp_1.AllDBN.txt  BNIP1-201.win_120.stp_1.AllDBN_refold.txt  BNIP1-201.win_120.stp_1.NoFilter.ct  BNIP1-201.win_120.stp_1.NoFilter.dbn  BNIP1-201.win_120.stp_1.ScanFold.FinalPartners.txt  BNIP1-201.win_120.stp_1.Zavg_-1.ct  BNIP1-201.win_120.stp_1.Zavg_-1.dbn  BNIP1-201.win_120.stp_1.Zavg_-2.ct  BNIP1-201.win_120.stp_1.Zavg_-2.dbn  BNIP1-201.win_120.stp_1.fa  BNIP1-201.win_120.stp_1.fai  BNIP1-201.win_120.stp_1.structure_extracts.txt
test/bnip1-201_fulltranscript/extracted_structures/: bnip1-201_fulltranscript_motif_1.dbn  motif_1.ps
test/bnip1-201_fulltranscript/igv_files/: BNIP1-201.win_120.stp_1.ALL.bp  BNIP1-201.win_120.stp_1.bp  BNIP1-201.win_120.stp_1.ed_avgs.wig  BNIP1-201.win_120.stp_1.mfe_avgs.wig  BNIP1-201.win_120.stp_1.zavgs.wig
test/bnip1-201_fulltranscript/inforna_structures/: bnip1-201_fulltranscript_motif_1.ct
test/coronaframeshift/: coronaframeshiftextended.fasta  fs.1.win_120.stp_1.tsv
test/coronaframeshift/extracted_structures/: coronaframeshift_motif_1.dbn  coronaframeshift_motif_2.dbn  coronaframeshift_motif_3.dbn  motif_1.ps  motif_2.ps  motif_3.ps
test/coronaframeshift/igv_files/: ENA%7CMT192772%7CMT192772.1.win_120.stp_1.ALL.bp  ENA%7CMT192772%7CMT192772.1.win_120.stp_1.bp  ENA%7CMT192772%7CMT192772.1.win_120.stp_1.ed_avgs.wig  ENA%7CMT192772%7CMT192772.1.win_120.stp_1.mfe_avgs.wig  ENA%7CMT192772%7CMT192772.1.win_120.stp_1.zavgs.wig
test/coronaframeshift/inforna_structures/: coronaframeshift_motif_1.ct  coronaframeshift_motif_2.ct  coronaframeshift_motif_3.ct
test/coronaframeshift/probability_matrices/: prob_matrix.csv  prob_matrix.matrix
test/run/: log.txt  matching.txt  matrix.csv  matrix.txt  test.py  test.sh
